crates/cypher-ast/tests/snapshots/snapshot__pattern_labeled_node.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 276
expression: "dump(\"MATCH (n:Person) RETURN n\")"
---
SourceFile(SOURCE_FILE@0..25)
  STATEMENT@0..25
    MatchClause(MATCH_CLAUSE@0..16)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..16)
        PATTERN_PART@5..16
          NodePattern(NODE_PATTERN@5..16)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            LabelExpr(LABEL_EXPR@8..15)
              COLON@8..9 ":"
              IDENT@9..15 "Person"
            R_PAREN@15..16 ")"
    ReturnClause(RETURN_CLAUSE@16..25)
      WHITESPACE@16..17 " "
      RETURN_KW@17..23 "RETURN"
      RETURN_BODY@23..25
        RETURN_ITEMS@23..25
          ReturnItem(RETURN_ITEM@23..25)
            VAR_EXPR@23..25
              WHITESPACE@23..24 " "
              IDENT@24..25 "n"
