crates/cypher-ast/tests/snapshots/snapshot__pattern_rel_undirected.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 303
expression: "dump(\"MATCH (a)-[r]-(b) RETURN a, b\")"
---
SourceFile(SOURCE_FILE@0..29)
  STATEMENT@0..29
    MatchClause(MATCH_CLAUSE@0..17)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..17)
        PATTERN_PART@5..17
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
          REL_PATTERN@9..14
            MINUS@9..10 "-"
            RelDetail(REL_DETAIL@10..13)
              L_BRACK@10..11 "["
              NAME@11..12
                IDENT@11..12 "r"
              R_BRACK@12..13 "]"
            MINUS@13..14 "-"
          NodePattern(NODE_PATTERN@14..17)
            L_PAREN@14..15 "("
            NAME@15..16
              IDENT@15..16 "b"
            R_PAREN@16..17 ")"
    ReturnClause(RETURN_CLAUSE@17..29)
      WHITESPACE@17..18 " "
      RETURN_KW@18..24 "RETURN"
      RETURN_BODY@24..29
        RETURN_ITEMS@24..29
          ReturnItem(RETURN_ITEM@24..26)
            VAR_EXPR@24..26
              WHITESPACE@24..25 " "
              IDENT@25..26 "a"
          COMMA@26..27 ","
          ReturnItem(RETURN_ITEM@27..29)
            VAR_EXPR@27..29
              WHITESPACE@27..28 " "
              IDENT@28..29 "b"
