crates/cypher-ast/tests/snapshots/snapshot__where_expr_starts_with.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 424
expression: "dump(\"MATCH (n) WHERE n.name STARTS WITH 'Al' RETURN n\")"
---
SourceFile(SOURCE_FILE@0..48)
  STATEMENT@0..48
    MatchClause(MATCH_CLAUSE@0..39)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WhereClause(WHERE_CLAUSE@9..39)
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        STRING_OP_EXPR@15..39
          PROP_ACCESS_EXPR@15..22
            VAR_EXPR@15..17
              WHITESPACE@15..16 " "
              IDENT@16..17 "n"
            DOT@17..18 "."
            IDENT@18..22 "name"
          WHITESPACE@22..23 " "
          STARTS_KW@23..29 "STARTS"
          WHITESPACE@29..30 " "
          WITH_KW@30..34 "WITH"
          LITERAL_EXPR@34..39
            WHITESPACE@34..35 " "
            STRING_LITERAL@35..39 "'Al'"
    ReturnClause(RETURN_CLAUSE@39..48)
      WHITESPACE@39..40 " "
      RETURN_KW@40..46 "RETURN"
      RETURN_BODY@46..48
        RETURN_ITEMS@46..48
          ReturnItem(RETURN_ITEM@46..48)
            VAR_EXPR@46..48
              WHITESPACE@46..47 " "
              IDENT@47..48 "n"
